FFMPEG puesto como exe para ordenadores de aula

--- a/ENTREGA_FINAL.ipynb
+++ b/ENTREGA_FINAL.ipynb
@@ -21,13 +21,12 @@
     "IMPORTANTE:\n",
     "* Recomendamos ejecutar este cuaderno desde el principio y en orden puesto que hay variables que se sobreescriben.\n",
     "* Recomendamos ejecutar este cuaderno en el **entorno nativo de Jupyter Notebook** (al que se accede mediante Anaconda Powershell Prompt) o en **Visual Studio Code**, puesto que son los únicos en los que hemos testeado el correcto funcionamiento. Si se ejecuta en otros entornos, **no podemos asegurar el correcto funcionamiento de todos los componentes del cuaderno**, pusto que, por ejemplo, cada entorno soporta distintos formatos de vídeo o audio.\n",
-    "* Para el correcto funcionamiento del programa **HAY QUE TENER CORRECTAMENTE INSTALADO FFMPEG**, con su carpeta en el disco local y añadida al PATH del sistema. Esto se debe a que la libreria `ffmpeg-python` hace uso de ffmpeg. \n",
-    "Para más información, visitar https://www.wikihow.com/Install-FFmpeg-on-Windows.\n"
+    "* Para el correcto funcionamiento del programa **debe estar ejecutandose desde un sistema operativo Windows** , al igual que los ordenadores del aula de prácticas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "a66fb434",
    "metadata": {},
    "outputs": [],
@@ -42,7 +41,6 @@
     "    \"ipywidgets\": \"ipywidgets\",\n",
     "    \"bqplot\": \"bqplot\",\n",
     "    \"pyaudio\": \"pyaudio\",\n",
-    "    \"ffmpeg\": \"ffmpeg-python\",\n",
     "    \"cv2\": \"opencv-python\",\n",
     "    \"imageio\": \"imageio\"\n",
     "    # \"os\", \"shutil\", \"subprocess\", \"threading\", \"colorsys\" → módulos estándar, no necesitan instalación\n",
@@ -172,21 +170,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e44b2855",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Eliminando carpeta existente: fotogramas/\n",
-      "Eliminando carpeta existente: exports/\n",
-      "Carpeta fotogramas creada.\n",
-      "Carpeta exports creada.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Configuración\n",
     "AUDIO_PATH = 'audios/music.wav' # Ruta del audio que vamos a usar\n",
@@ -222,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "fca6dd38",
    "metadata": {},
    "outputs": [],
@@ -261,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "afd78f44",
    "metadata": {},
    "outputs": [],
@@ -309,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "a9a23679",
    "metadata": {},
    "outputs": [],
@@ -338,19 +325,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "f5f67373",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generando frames...\n",
-      "Completado 100.00 %"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def generar_frames(x,fs, FRAME_FOLDER):\n",
     "    \"\"\" Genera los frames para el vídeo y los guarda en la carpeta FRAME_FOLDER\n",
@@ -387,55 +365,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "8810ded3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def crear_video(audio_path, out_path, frames_dir=\"fotogramas\", framerate=25):\n",
+    "def crear_video(audio_path, out_path, frames_dir=\"fotogramas\", framerate=25, ffmpeg_path=\"ffmpeg.exe\"):\n",
     "    try:\n",
     "        if os.path.exists(out_path):\n",
     "            os.remove(out_path)\n",
     "\n",
     "        input_video = os.path.join(frames_dir, \"frame_%04d.png\")\n",
     "\n",
-    "        # Crear entradas por separado\n",
-    "        video_input = ffmpeg.input(input_video, framerate=framerate)\n",
-    "        audio_input = ffmpeg.input(audio_path)\n",
-    "\n",
-    "        (\n",
-    "            ffmpeg\n",
-    "            .output(\n",
-    "                video_input, audio_input,\n",
-    "                out_path,\n",
-    "                vcodec='libx264',\n",
-    "                acodec=\"pcm_s32le\", # Formato de audio soportado por VSCode\n",
-    "                pix_fmt='yuv420p',\n",
-    "                shortest=None\n",
-    "            )\n",
-    "            .run(overwrite_output=True)\n",
-    "        )\n",
+    "        # Construir comando subprocess\n",
+    "        cmd = [\n",
+    "            ffmpeg_path,\n",
+    "            \"-y\",\n",
+    "            \"-framerate\", str(framerate),\n",
+    "            \"-i\", input_video,\n",
+    "            \"-i\", audio_path,\n",
+    "            \"-vcodec\", \"libx264\",\n",
+    "            \"-acodec\", \"pcm_s32le\",\n",
+    "            \"-pix_fmt\", \"yuv420p\",\n",
+    "            \"-shortest\",\n",
+    "            out_path\n",
+    "        ]\n",
+    "        subprocess.run(cmd, check=True)\n",
     "\n",
     "        print(f\"\\n[OK] Video exportado como: {out_path}\")\n",
-    "    except ffmpeg.Error as e:\n",
+    "\n",
+    "    except subprocess.CalledProcessError as e:\n",
     "        print(\"Error al crear el video:\")\n",
-    "        print(e.stderr.decode() if hasattr(e, \"stderr\") else e)\n"
+    "        print(e)\n",
+    "\n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"No se encontró ffmpeg en la ruta: {ffmpeg_path}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "2cc26ef0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[OK] Video exportado como: exports/pruebaPitch.mp4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "crear_video(AUDIO_PATH,out)"
    ]
@@ -453,23 +425,7 @@
    "execution_count": null,
    "id": "cd3a4feb",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<video src=\"exports/pruebaPitch.mp4\" controls  >\n",
-       "      Your browser does not support the <code>video</code> element.\n",
-       "    </video>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Video object>"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Video(out)"
    ]
@@ -527,16 +483,7 @@
    "execution_count": null,
    "id": "23ee1ca2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generando frames...\n",
-      "Completado 100.00 %[OK] Video exportado como: exports/pruebaBarras.mp4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def generar_frames(x,fs, FRAME_FOLDER):\n",
     "    \"\"\" Genera los frames para el vídeo y los guarda en la carpeta FRAME_FOLDER\n",
@@ -599,26 +546,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "8a44c92e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<video src=\"exports/pruebaBarras.mp4\" controls  >\n",
-       "      Your browser does not support the <code>video</code> element.\n",
-       "    </video>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Video object>"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Video(out)"
    ]
@@ -647,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "0c09f905",
    "metadata": {},
    "outputs": [],
@@ -675,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "c2ef1d08",
    "metadata": {},
    "outputs": [],
@@ -724,19 +655,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "d653e3b9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generando frames...\n",
-      "Completado 100.00 %[OK] Video exportado como: exports/pruebaRitmo.mp4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def generar_frames(x,fs, FRAME_FOLDER):\n",
     "    \"\"\" Genera los frames para el vídeo y los guarda en la carpeta FRAME_FOLDER\n",
@@ -807,26 +729,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "0b9c0c88",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<video src=\"exports/pruebaRitmo.mp4\" controls  >\n",
-       "      Your browser does not support the <code>video</code> element.\n",
-       "    </video>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Video object>"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Video(out)"
    ]
@@ -843,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "a38f1360",
    "metadata": {},
    "outputs": [],
@@ -913,19 +819,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "79f7dafa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generando frames...\n",
-      "Completado 100.00 %[OK] Video exportado como: exports/pruebaRitmo2.mp4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def generar_frames(x,fs, FRAME_FOLDER):\n",
     "    \"\"\" Genera los frames para el vídeo y los guarda en la carpeta FRAME_FOLDER\n",
@@ -997,26 +894,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "6f340257",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<video src=\"exports/pruebaRitmo2.mp4\" controls  >\n",
-       "      Your browser does not support the <code>video</code> element.\n",
-       "    </video>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Video object>"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Video(out)"
    ]
@@ -1093,20 +974,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "9535e446",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generando frames...\n",
-      "Completado 100.00 %\n",
-      "[OK] Video exportado como: exports/pruebaColor.mp4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def generar_frames(x,fs, FRAME_FOLDER):\n",
     "    \"\"\" Genera los frames para el vídeo y los guarda en la carpeta FRAME_FOLDER\n",
@@ -1180,26 +1051,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "f83cf550",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<video src=\"exports/pruebaColor.mp4\" controls  >\n",
-       "      Your browser does not support the <code>video</code> element.\n",
-       "    </video>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Video object>"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Video(out)"
    ]
@@ -1222,35 +1077,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "ad816a94",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generando frames...\n",
-      "Completado 100.00 %\n",
-      "[OK] Video exportado como: exports/final.mp4\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<video src=\"exports/final.mp4\" controls  >\n",
-       "      Your browser does not support the <code>video</code> element.\n",
-       "    </video>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Video object>"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Configuración\n",
     "AUDIO_PATH = 'audios/music.wav' # Ruta del audio que vamos a usar\n",
@@ -1618,6 +1448,11 @@
     "        self.b_band = firwin(numcoef, [3000,10000], pass_zero=False,         fs=self.fs)\n",
     "        self.b_high = firwin(numcoef,       cutoff=10000, pass_zero=False,   fs=self.fs)\n",
     "\n",
+    "        # Usar ffmpeg local (Windows -  como los ordenadores del aula)\n",
+    "        self.ffmpeg_path = os.path.abspath(\"ffmpeg.exe\")\n",
+    "        if not os.path.isfile(self.ffmpeg_path):\n",
+    "            raise FileNotFoundError(\"No se encontró 'ffmpeg.exe' en el directorio del proyecto.\")\n",
+    "\n",
     "        # Crear carpetas de salida\n",
     "        if os.path.exists(self.frames_dir):\n",
     "            shutil.rmtree(self.frames_dir)\n",
@@ -1794,9 +1629,9 @@
     "        if os.path.exists(out_video):\n",
     "            os.remove(out_video)\n",
     "\n",
-    "        # Paso 1: Generar MP4 a partir de imágenes (sin audio aún)\n",
+    "        # Paso 1: Generar MP4 a partir de imágenes\n",
     "        cmd = [\n",
-    "            \"ffmpeg\", \"-y\",\n",
+    "            self.ffmpeg_path, \"-y\",\n",
     "            \"-framerate\", str(self.fps),\n",
     "            \"-i\", os.path.join(self.frames_dir, \"frame_%04d.png\"),\n",
     "            \"-c:v\", \"libx264\",\n",
@@ -1805,30 +1640,9 @@
     "            \"-pix_fmt\", \"yuv444p\",\n",
     "            out_video\n",
     "        ]\n",
+    "\n",
     "        subprocess.run(cmd, check=True)\n",
     "        print(f\"[Encoder] Video sin audio exportado en '{out_video}'\")\n",
-    "\n",
-    "        # Paso 2: Añadir audio reconstruido si existe\n",
-    "        if hasattr(self, \"_recon_audio\") and self._recon_audio is not None:\n",
-    "            temp_wav = os.path.join(self.export_dir, \"temp_audio.wav\")\n",
-    "            wav.write(temp_wav, self.fs, (self._recon_audio * 32767).astype(np.int16))\n",
-    "\n",
-    "            out_final = out_video.replace(\".mp4\", \"_withaudio.mp4\")\n",
-    "\n",
-    "            cmd_audio = [\n",
-    "                \"ffmpeg\", \"-y\",\n",
-    "                \"-i\", out_video,\n",
-    "                \"-i\", temp_wav,\n",
-    "                \"-c:v\", \"copy\",\n",
-    "                \"-c:a\", \"aac\",  # o \"pcm_s16le\" si prefieres sin compresión\n",
-    "                \"-shortest\",\n",
-    "                out_final\n",
-    "            ]\n",
-    "            subprocess.run(cmd_audio, check=True)\n",
-    "            print(f\"[Encoder] Video final con audio reconstruido: '{out_final}'\")\n",
-    "\n",
-    "            return out_final\n",
-    "\n",
     "        return out_video\n"
    ]
   },
@@ -2656,7 +2470,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Voz",
    "language": "python",
    "name": "python3"
   },
@@ -2670,7 +2484,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.9.17"
   }
  },
  "nbformat": 4,
