Mejora del indice y titulos apartado ricardo

--- a/ENTREGA_FINAL.ipynb
+++ b/ENTREGA_FINAL.ipynb
@@ -1277,7 +1277,7 @@
     "\n",
     "---\n",
     "\n",
-    "### Modos de codificación (`map_mode`)\n",
+    "#### Modos de codificación (`map_mode`)\n",
     "\n",
     "Cada bloque de audio se transforma en una fila de píxeles mediante uno de los siguientes modos:\n",
     "\n",
@@ -1295,7 +1295,7 @@
     "\n",
     "---\n",
     "\n",
-    "### Modos de visualización (`color_mode`)\n",
+    "#### Modos de visualización (`color_mode`)\n",
     "\n",
     "Los frames generados pueden representarse en dos formas:\n",
     "\n",
@@ -1309,7 +1309,7 @@
     "\n",
     "---\n",
     "\n",
-    "### Estructura del sistema\n",
+    "#### Estructura del sistema\n",
     "\n",
     "- **Codificador:**  \n",
     "  Hace un análisis por bloques solapados y enventanados del audio, aplica la codificación elegida y genera una secuencia de imágenes PNG. Luego empaqueta los frames en un vídeo MP4 usando FFmpeg.  \n",
@@ -1332,7 +1332,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "### Detalles del flujo del codificador\n",
+    "#### Detalles del flujo del codificador\n",
     "\n",
     "El proceso de codificación se inicia dividiendo el audio en bloques de tamaño fijo `N = fs / fps`, aplicando una ventana para suavizar los bordes, y generando una imagen por cada bloque.\n",
     "\n",
@@ -1876,7 +1876,7 @@
    "id": "f148e2eb",
    "metadata": {},
    "source": [
-    "### Relación entre FPS y FS en PixelSounds\n",
+    "#### Relación entre FPS y FS en PixelSounds\n",
     "\n",
     "Una parte clave del sistema PixelSounds es la relación entre la frecuencia de muestreo del audio (`fs`) y los fotogramas por segundo (`fps`) del vídeo generado. Esta relación determina cómo se divide la señal de audio en bloques temporales y, por tanto, qué resolución temporal tendrá la visualización.\n",
     "\n",
@@ -1931,7 +1931,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "### Codificación\n",
+    "#### Codificación\n",
     "\n",
     "- **Bloque y ventana**  \n",
     "  Se extrae un fragmento de \\( N \\) muestras del audio y se aplica una ventana (por ejemplo, Hann) para evitar discontinuidades en los bordes.\n",
@@ -2085,7 +2085,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "### Codificación\n",
+    "#### Codificación\n",
     "\n",
     "- **Transformada de Fourier (FFT)**  \n",
     "  Se aplica una FFT al bloque de audio con longitud \\( N \\) y se centra el espectro usando un `fftshift`.\n",
@@ -2178,7 +2178,7 @@
    "id": "cead31d1",
    "metadata": {},
    "source": [
-    "### Visualización"
+    "#### Visualización"
    ]
   },
   {
@@ -2219,7 +2219,7 @@
    "id": "cd806145",
    "metadata": {},
    "source": [
-    "### Decodificación"
+    "#### Decodificación"
    ]
   },
   {
